# MPPK-DSTK

./: CMakeLists.txt  README.md  build_script
lib/: CMakeLists.txt
lib/hash/SHAKE256/: CMakeLists.txt  FIPS202.c  FIPS202.h
lib/hash/SHAKE256/armv8/: KECCAK.S
lib/random/: CMakeLists.txt  random.h
python/: mppkdstk.py
src/: mppktk.c  mppktk.h  mppktk_config.h
